added job detail page and style

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,9 +2,16 @@
   display: grid;
   grid-template-columns: 350px repeat(4, minmax(0, 1fr));
 }
+.grid-custom-jobDetail {
+  display: grid;
+  grid-template-columns: 1fr 400px;
+}
 
 @media screen and (max-width: 640px) {
   .grid-custom {
     grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+  .grid-custom-jobDetail {
+    grid-template-columns: 1fr;
   }
 }
